--- a/sg/rest-api/src/main/resources/config/application.properties
+++ b/sg/rest-api/src/main/resources/config/application.properties
@@ -16,4 +16,4 @@ hibernate.format_sql = true
 hibernate.hbm2ddl.auto=create-drop
 
 #security
-security.key=F55721AA6AB43C496B898D9F298A2
+com.sg.security.key=F55721AA6AB43C496B898D9F298A2
