--- a/sg/rest-api/src/test/resources/com/sg/conf/rest.test.properties
+++ b/sg/rest-api/src/test/resources/com/sg/conf/rest.test.properties
@@ -22,4 +22,4 @@ hibernate.format_sql = true
 hibernate.hbm2ddl.auto=create-drop
 
 #security
-security.key=883A6479262FD55859E2F41441293
+com.sg.security.key=883A6479262FD55859E2F41441293
