--- a/sg/rest-integ-test/src/test/resources/com/sg/conf/internal.dev.properties
+++ b/sg/rest-integ-test/src/test/resources/com/sg/conf/internal.dev.properties
@@ -8,4 +8,4 @@ user.password=user
 rest_api.base_uri=https://helical-analogy-659.appspot.com
 
 #security to generate token in test
-security.key=F55721AA6AB43C496B898D9F298A2
+com.sg.security.key=F55721AA6AB43C496B898D9F298A2
