--- a/sg/rest-integ-test/src/test/resources/com/sg/conf/gae.prod.properties
+++ b/sg/rest-integ-test/src/test/resources/com/sg/conf/gae.prod.properties
@@ -8,4 +8,4 @@ user.password=user
 rest_api.base_uri=http://localhost:8080/sg-rest-api
 
 #security to generate token in test
-security.key=F55721AA6AB43C496B898D9F298A2
+com.sg.security.key=F55721AA6AB43C496B898D9F298A2
