--- a/sg/domain/pom.xml
+++ b/sg/domain/pom.xml
@@ -23,5 +23,20 @@
             <artifactId>orika-core</artifactId>
             <version>${orika-core-version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>  
     </dependencies>
 </project>
