--- a/sg/domain/pom.xml
+++ b/sg/domain/pom.xml
@@ -15,6 +15,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.sg.rest</groupId>
             <artifactId>dto</artifactId>
         </dependency>
