--- a/sg/pom.xml
+++ b/sg/pom.xml
@@ -9,11 +9,12 @@
     <parent>
         <groupId>io.spring.platform</groupId>
         <artifactId>platform-bom</artifactId>
-        <version>1.0.3.RELEASE</version>
+        <version>1.1.3.RELEASE</version>
         <relativePath/>
     </parent>
   
     <properties>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <orika-core-version>1.4.5</orika-core-version>
@@ -41,6 +42,11 @@
         <dependencies>
             <dependency>
                 <groupId>com.sg.rest</groupId>
+                <artifactId>api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sg.rest</groupId>
                 <artifactId>authtoken</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -60,7 +66,7 @@
                 <version>${project.version}</version>
                 <type>war</type>
             </dependency>
-<!--            <dependency>
+            <!--            <dependency>
                 <groupId>com.sg.rest</groupId>
                 <artifactId>rest-integ-test</artifactId>
                 <version>${project.version}</version>
@@ -71,8 +77,9 @@
     <modules>
         <module>domain</module>
         <module>domain-jpa</module>
+        <module>api</module>
         <module>rest-api</module>
-<!--        <module>rest-integ-test</module>-->
+        <!--        <module>rest-integ-test</module>-->
         <module>authtoken</module>
     </modules>
 </project>
