- Port jwt token code: jwt accomodate String uid only
 - Application auth service

 - Auth exception translation logic

 - CORS filter

--- a/rest/api/pom.xml
+++ b/rest/api/pom.xml
@@ -46,6 +46,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sg.rest</groupId>
+            <artifactId>authtoken</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
