--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -15,7 +15,8 @@
   
     <properties>
         <java.version>1.8</java.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>        
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jsontoken-version>1.1</jsontoken-version>        
     </properties>
 
     <dependencyManagement>
@@ -30,11 +31,17 @@
                 <artifactId>domain</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.sg.rest</groupId>
+                <artifactId>authtoken</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <modules>
         <module>domain</module>
         <module>api</module>
+        <module>authtoken</module>
     </modules>
 </project>
