--- a/rest/domain/pom.xml
+++ b/rest/domain/pom.xml
@@ -15,6 +15,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
