--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -16,7 +16,9 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <jsontoken-version>1.1</jsontoken-version>        
+        <jsontoken-version>1.1</jsontoken-version>
+        <commons-validator.version>1.3.1</commons-validator.version>     
+        <passay.version>1.1.0</passay.version>   
     </properties>
 
     <dependencyManagement>
