--- a/rest/api/application.properties
+++ b/rest/api/application.properties
@@ -5,3 +5,7 @@ spring.social.facebook.appId=1466187777020513
 spring.social.facebook.appSecret=d45d8074d897a82838e9c52059442bf0
 #security
 com.sg.security.key=F55721AA6AB43C496B898D9F298A2
+#keystore
+key.alias=tomcat
+keystore.password=Kazah7tan
+truststore.password=Kazah7tan
