--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -19,6 +19,7 @@
         <jsontoken-version>1.1</jsontoken-version>
         <commons-validator.version>1.3.1</commons-validator.version>     
         <passay.version>1.1.0</passay.version>   
+        <oro.version>2.0.8</oro.version>
     </properties>
 
     <dependencyManagement>
