--- a/rest/api/application.properties
+++ b/rest/api/application.properties
@@ -9,3 +9,9 @@ com.sg.security.key=F55721AA6AB43C496B898D9F298A2
 key.alias=tomcat
 keystore.password=Kazah7tan
 truststore.password=Kazah7tan
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=tarasov.e.a@gmail.com
+spring.mail.password=328869Airina
+spring.mail.properties.mail.smtp.starttls.enable=true
