resend verification email

--- a/rest/api/application.properties
+++ b/rest/api/application.properties
@@ -15,3 +15,6 @@ spring.mail.port=587
 spring.mail.username=tarasov.e.a@gmail.com
 spring.mail.password=328869Airina
 spring.mail.properties.mail.smtp.starttls.enable=true
+#site
+site.url=sg.com
+site.notification.email=info@sg.com
