--- a/static/package.json
+++ b/static/package.json
@@ -1,13 +1,17 @@
 {
   "name": "stitchgalaxy",
-  "version": "1.0.0",
-  "description": "Stitch galaxy node module",
-  "main": "Gruntfile.js",
-  "author": "Evgeny Tarasov",
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-autoprefixer": "3.0.3",
+    "grunt-bower-task": "0.4.0",
+    "grunt-contrib-clean": "0.6.0",
+    "grunt-contrib-compass": "1.0.4",
     "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-connect": "0.11.2",
+    "grunt-contrib-jshint": "0.11.3",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-wiredep": "2.0.0",
     "load-grunt-tasks": "3.3.0",
-    "time-grunt": "^1.2.1"
+    "time-grunt": "1.2.1"
   }
 }
