--- a/static/package.json
+++ b/static/package.json
@@ -8,8 +8,17 @@
     "grunt-contrib-compass": "1.0.4",
     "grunt-contrib-concat": "0.5.1",
     "grunt-contrib-connect": "0.11.2",
+    "grunt-contrib-copy": "0.8.1",
+    "grunt-contrib-cssmin": "0.14.0",
+    "grunt-contrib-htmlmin": "0.5.0",
+    "grunt-contrib-imagemin": "0.9.4",
     "grunt-contrib-jshint": "0.11.3",
+    "grunt-contrib-uglify": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
+    "grunt-filerev": "2.3.1",
+    "grunt-ng-annotate": "1.0.1",
+    "grunt-tinypng": "0.6.1",
+    "grunt-usemin": "3.1.1",
     "grunt-wiredep": "2.0.0",
     "load-grunt-tasks": "3.3.0",
     "time-grunt": "1.2.1"
