--- a/static/bower.json
+++ b/static/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "stitchgalaxy",
   "dependencies": {
-    "bootstrap": "3.3.5"
+    "bootstrap": "3.3.5",
+    "angular": "1.4.7",
+    "angular-route": "1.4.7"
   }
 }
