--- a/static/bower.json
+++ b/static/bower.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "bootstrap": "3.3.4",
     "angular": "1.4.7",
-    "angular-route": "1.4.7"
+    "angular-route": "1.4.7",
+    "components-font-awesome": "~4.4.0"
   }
 }
