--- a/static/package.json
+++ b/static/package.json
@@ -1,6 +1,9 @@
 {
   "name": "stitchgalaxy",
   "devDependencies": {
+    "bower": "1.5.3",
+    "csso": "1.4.0",
+    "del": "2.0.2",
     "grunt": "0.4.5",
     "grunt-autoprefixer": "3.0.3",
     "grunt-bower-task": "0.4.0",
@@ -20,7 +23,28 @@
     "grunt-tinypng": "0.6.1",
     "grunt-usemin": "3.1.1",
     "grunt-wiredep": "2.0.0",
+    "gulp": "3.9.0",
+    "gulp-autoprefixer": "3.0.2",
+    "gulp-bower": "0.0.10",
+    "gulp-connect": "2.2.0",
+    "gulp-copy": "0.0.2",
+    "gulp-filter": "3.0.1",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "2.3.0",
+    "gulp-jshint": "1.11.2",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rev": "6.0.1",
+    "gulp-rev-collector": "1.0.2",
+    "gulp-sass": "2.0.4",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.4.2",
+    "gulp-usemin": "^0.3.14",
+    "gulp-useref": "1.3.0",
+    "jshint-stylish": "2.0.1",
     "load-grunt-tasks": "3.3.0",
-    "time-grunt": "1.2.1"
+    "node-sass": "3.3.3",
+    "time-grunt": "1.2.1",
+    "wiredep": "2.2.2"
   }
 }
