--- a/static/package.json
+++ b/static/package.json
@@ -34,6 +34,7 @@
     "gulp-jshint": "1.11.2",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.4",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-rev": "6.0.1",
     "gulp-rev-collector": "1.0.2",
     "gulp-sass": "2.0.4",
