--- a/static/package.json
+++ b/static/package.json
@@ -1,51 +1,25 @@
 {
   "name": "stitchgalaxy",
   "devDependencies": {
-    "bower": "1.5.3",
-    "csso": "1.4.0",
+    "bower": "1.6.3",
     "del": "2.0.2",
-    "grunt": "0.4.5",
-    "grunt-autoprefixer": "3.0.3",
-    "grunt-bower-task": "0.4.0",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-compass": "1.0.4",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-connect": "0.11.2",
-    "grunt-contrib-copy": "0.8.1",
-    "grunt-contrib-cssmin": "0.14.0",
-    "grunt-contrib-htmlmin": "0.5.0",
-    "grunt-contrib-imagemin": "0.9.4",
-    "grunt-contrib-jshint": "0.11.3",
-    "grunt-contrib-uglify": "0.9.2",
-    "grunt-contrib-watch": "0.6.1",
-    "grunt-filerev": "2.3.1",
-    "grunt-ng-annotate": "1.0.1",
-    "grunt-tinypng": "0.6.1",
-    "grunt-usemin": "3.1.1",
-    "grunt-wiredep": "2.0.0",
     "gulp": "3.9.0",
-    "gulp-autoprefixer": "3.0.2",
+    "gulp-autoprefixer": "3.1.0",
     "gulp-bower": "0.0.10",
     "gulp-connect": "2.2.0",
     "gulp-copy": "0.0.2",
-    "gulp-filter": "3.0.1",
-    "gulp-if": "^2.0.0",
     "gulp-imagemin": "2.3.0",
     "gulp-jshint": "1.11.2",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-minify-html": "^1.0.4",
-    "gulp-ng-annotate": "^1.1.0",
+    "gulp-minify-css": "1.2.1",
+    "gulp-minify-html": "1.0.4",
+    "gulp-ng-annotate": "1.1.0",
     "gulp-rev": "6.0.1",
-    "gulp-rev-collector": "1.0.2",
     "gulp-sass": "2.0.4",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.4.2",
-    "gulp-usemin": "^0.3.14",
-    "gulp-useref": "1.3.0",
+    "gulp-usemin": "0.3.14",
     "jshint-stylish": "2.0.1",
-    "load-grunt-tasks": "3.3.0",
     "node-sass": "3.3.3",
-    "time-grunt": "1.2.1",
     "wiredep": "2.2.2"
   }
 }
