--- a/static/package.json
+++ b/static/package.json
@@ -6,6 +6,9 @@
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-bower": "0.0.10",
+    "gulp-cache": "0.3.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.2.0",
     "gulp-connect": "2.2.0",
     "gulp-copy": "0.0.2",
     "gulp-imagemin": "2.3.0",
@@ -13,6 +16,7 @@
     "gulp-minify-css": "1.2.1",
     "gulp-minify-html": "1.0.4",
     "gulp-ng-annotate": "1.1.0",
+    "gulp-rename": "1.2.2",
     "gulp-rev": "6.0.1",
     "gulp-sass": "2.0.4",
     "gulp-sourcemaps": "1.6.0",
