--- a/static/package.json
+++ b/static/package.json
@@ -18,6 +18,7 @@
     "gulp-ng-annotate": "1.1.0",
     "gulp-rename": "1.2.2",
     "gulp-rev": "6.0.1",
+    "gulp-rev-collector": "1.0.2",
     "gulp-sass": "2.0.4",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.4.2",
