--- a/static/package.json
+++ b/static/package.json
@@ -4,11 +4,11 @@
     "bower": "1.6.3",
     "del": "2.0.2",
     "gulp": "3.9.0",
+    "gulp-angular-templatecache": "1.8.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-bower": "0.0.10",
     "gulp-cache": "0.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-concat-css": "^2.2.0",
+    "gulp-concat": "2.6.0",
     "gulp-connect": "2.2.0",
     "gulp-copy": "0.0.2",
     "gulp-imagemin": "2.3.0",
@@ -22,9 +22,9 @@
     "gulp-sass": "2.0.4",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.4.2",
-    "gulp-usemin": "0.3.14",
     "jshint-stylish": "2.0.1",
     "node-sass": "3.3.3",
+    "run-sequence": "1.1.4",
     "wiredep": "2.2.2"
   }
 }
