--- a/static/bower.json
+++ b/static/bower.json
@@ -1,10 +1,13 @@
 {
   "name": "stitchgalaxy",
   "dependencies": {
-    "bootstrap-sass": "3.3.4",
     "angular": "1.4.7",
     "angular-route": "1.4.7",
     "components-font-awesome": "4.4.0",
-    "angular-translate": "2.8.1"
+    "angular-translate": "2.8.1",
+    "jquery": "2.1.4"
+  },
+  "devDependencies": {
+    "jquery": "~2.1.4"
   }
 }
