--- a/static/package.json
+++ b/static/package.json
@@ -9,6 +9,7 @@
     "gulp-autoprefixer": "3.1.0",
     "gulp-bower": "0.0.10",
     "gulp-cache": "0.3.0",
+    "gulp-compass": "2.1.0",
     "gulp-concat": "2.6.0",
     "gulp-connect": "2.2.0",
     "gulp-copy": "0.0.2",
