--- a/static/bower.json
+++ b/static/bower.json
@@ -3,9 +3,9 @@
   "dependencies": {
     "angular": "1.4.7",
     "angular-route": "1.4.7",
-    "components-font-awesome": "4.4.0",
     "angular-translate": "2.8.1",
-    "jquery": "2.1.4"
+    "jquery": "2.1.4",
+    "components-font-awesome": "4.4.0"
   },
   "devDependencies": {
     "bourbon": "4.2.6"
