--- a/static/bower.json
+++ b/static/bower.json
@@ -7,7 +7,8 @@
     "jquery": "2.1.4",
     "components-font-awesome": "4.4.0",
     "angular-ui-router": "ui-router#0.2.15",
-    "angular-sanitize": "1.4.7"
+    "angular-sanitize": "1.4.7",
+    "angular-translate-loader-static-files": "2.8.1"
   },
   "devDependencies": {
     "bourbon": "4.2.6"
