--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "react-router": "^2.4.1"
+    "react-intl": "^2.1.2",
+    "react-router": "^2.4.1",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
