--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,8 +18,12 @@
     "redux": "^3.5.2"
   },
   "devDependencies": {
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
+    "run-sequence": "^1.2.1",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
