--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
+    "html-webpack-plugin": "^2.17.0",
     "run-sequence": "^1.2.1",
     "source-map-loader": "^0.1.5",
     "ts-loader": "^0.8.2",
