--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-intl": "^2.1.2",
+    "react-intl-redux": "0.0.10",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
